# FlightTracer

./: .gitignore  README.md  cli.py  example.py  fetch_example.py  fetch_from_json.py  setup.cfg  setup.py
data/: exported_abfd8c_2025-02-09_2025-02-09.dbf  exported_abfd8c_2025-02-09_2025-02-09.shp  exported_abfd8c_2025-02-09_2025-02-09.shx  exported_c060ba_2025-02-07_2025-02-08.csv  exported_c060ba_2025-02-07_2025-02-08.dbf  exported_c060ba_2025-02-07_2025-02-08.shp  exported_c060ba_2025-02-07_2025-02-08.shx  flight_traces_0d086e_20250202.csv  flight_traces_0d086e_20250202.geojson  flight_traces_0d086e_20250203.csv  flight_traces_0d086e_20250203.geojson  flight_traces_a06f8a_20250204.csv  flight_traces_a06f8a_20250204.geojson  flight_traces_a11f59_20250208.csv  flight_traces_a11f59_20250208_lines.geojson  flight_traces_a11f59_20250209.csv  flight_traces_a11f59_20250209_lines.geojson  flight_traces_a11f59_20250209_points.geojson  flight_traces_a2644a_20250204.csv  flight_traces_a2644a_20250204.geojson  flight_traces_a339b4_20250204.csv  flight_traces_a339b4_20250204.geojson  flight_traces_a37eff_20250204.csv  flight_traces_a37eff_20250204.geojson  flight_traces_a97753_20250201.csv  flight_traces_a97753_20250201.geojson  flight_traces_ac308f_20250208.csv  flight_traces_ae4af6_20250205.csv  flight_traces_ae4af6_20250205.geojson  flight_traces_lines_0d086e_20250202.geojson  flight_traces_lines_0d086e_20250203.geojson  flight_traces_lines_a06f8a_20250204.geojson  flight_traces_lines_a2644a_20250204.geojson  flight_traces_lines_a339b4_20250204.geojson  (+8 more)
flight_tracer/: cli.py  (+2 more)
(+19 files in other folders)
