[metadata]
name = flight_tracer
version = 0.1.3
description = A package to fetch, process, store and plot aircraft trace data from ADS-B Exchange.
author = Matt Stiles
author_email = mattstiles@gmail.com
license = CC0-1.0
license_files = LICENSE  # This is OK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stiles/flight_tracer
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
    pandas
    geopandas
    boto3
    matplotlib
    contextily
    shapely
python_requires = >=3.7
